tradr/k8s/tradr-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradr
  annotations:
    app.kubernetes.io/part-of: Quarkus-DayTrader
spec:
  selector:
    matchLabels:
      app: tradr
  template:
    metadata:
      labels:
        app: tradr
    spec:
      containers:
      - name: tradr
        image: quay.io/kameshsampath/tradr
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
