tradr/k8s/tradr-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tradr
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: tradr
    weight: 100
  wildcardPolicy: None
